k8slearn/4.Kubernetes 配置管理/OPA/gatekeeper/test-namespace.yaml
# test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-test
  labels:
    a: b
    gatekeeper: abc
