k8slearn/4.Kubernetes 配置管理/OPA/gatekeeper/all_ns_must_have_gatekeeper.yaml
# all_ns_must_have_gatekeeper.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: ns-must-have-gk
spec:
  match:
    kinds:
      - apiGroups: ['']
        kinds: ['Namespace'] # 表示这个约束会在创建命名空间的时候被应用，可以使用 namespaceSelector、namespaces等进行过滤
  parameters:
    labels: ['gatekeeper'] # 根据schema规范定义
